# utag

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2c2f6d6.22  README.md
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  slots.cpp  song.h  sorting.cpp
taglib/: CMakeLists.txt
